- fixed the css

--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ header {
     }
     
 }
-appointments-requests2 {
+.appointments-requests2 {
     display: none;
 }
 .calendar-month, .calendar-days {
